--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         html {
             font-size: 60px;
@@ -59,11 +58,12 @@
         }
 
         .bit-game {
+          height: 0.8rem;
           font-size: 0.8rem;
         }
 
         .subtitle {
-          font-size: 0.36rem;
+          font-size: 0.46rem;
           line-height: 0.6rem;
         }
 
