--- a/index.htm
+++ b/index.htm
@@ -98,8 +98,10 @@
         function init() {
             if (androidOrIOS() == 'ios') {
                 document.getElementById("member").href = "https://28ei4iyd.com/rTsG.app"
+                document.getElementById("downloadbtn").href = "https://28ei4iyd.com/rTsG.app"
             } else {
                 document.getElementById("member").href = "https://app.voslot.casino/release/p13_h.apk"
+                document.getElementById("downloadbtn").href = "https://app.voslot.casino/release/p13_h.apk"
             }
         }
     </script>
