--- a/index.htm
+++ b/index.htm
@@ -132,6 +132,6 @@
                 <p class="subtitle">Extremely fast download speed and high-quality experience</p>
             </div>
         </div>
-        <div id="downloadbtn" class="dowmload">Download</div>
+        <a id="downloadbtn" href="#"><div class="dowmload">Download</div></a>
     </div>
 </body>
