--- a/index.htm
+++ b/index.htm
@@ -81,6 +81,15 @@
           border-radius: 25px;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DLV93GXZFX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DLV93GXZFX');
+    </script>
 </head>
 
 <body onload="init()" style="background: #100534; font-size: 25px;">
