--- a/index.htm
+++ b/index.htm
@@ -135,7 +135,7 @@
     </div>
     <div class="footer animate__animated animate__fadeInUp">
         <div class="tip">
-            <img src="https://28ei4iyd.com/oss/142336243924993/ios/1648552811594.png" class="small-logo" alt="logo">
+            <img src="https://static.wixstatic.com/media/0057d7_fbb7cdf3afc2452e9ef96e4e4ade9b54~mv2.jpg" class="small-logo" alt="logo">
             <div class="tip-content">
                 <b class="bit-game">VOSLOT</b>
                 <p class="subtitle">Extremely fast download speed and high-quality experience</p>
