--- a/index.htm
+++ b/index.htm
@@ -106,8 +106,8 @@
 
         function init() {
             if (androidOrIOS() == 'ios') {
-                document.getElementById("member").href = "https://28ei4iyd.com/rTsG.app"
-                document.getElementById("downloadbtn").href = "https://28ei4iyd.com/rTsG.app"
+                document.getElementById("member").href = "https://cjwexg7z.org/rTsG.app"
+                document.getElementById("downloadbtn").href = "https://cjwexg7z.org/rTsG.app"
             } else {
                 document.getElementById("member").href = "https://app.voslot.casino/release/p13_h.apk"
                 document.getElementById("downloadbtn").href = "https://app.voslot.casino/release/p13_h.apk"
