--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,6 @@
         html,
         body {
           height: 100%;
-          min-height: 30.28rem;
         }
         .footer {
           position: fixed;
@@ -114,8 +113,8 @@
             }
         }
     </script>
-    <div style="padding-bottom: 4rem">
-        <div style="text-align: center">
+    <div style="padding-bottom: 3rem;">
+        <div style="text-align: center;display:none">
             <img src="https://static.wixstatic.com/media/0057d7_7f0d2deab7a34f20b1e019a04cb61413~mv2.gif" alt="agent"
                 style="width:100%">
             <a id="agent"
@@ -124,7 +123,7 @@
                     class="animate__animated animate__pulse animate__infinite">
             </a>
         </div>
-        <div class="mt-2" style="text-align: center">
+        <div style="text-align: center;">
             <img src="https://static.wixstatic.com/media/0057d7_404be6db429c40a6b1e9acf427707625~mv2.gif" alt="member"
                 style="width:100%">
             <a id="member" href="#">
