--- a/index.htm
+++ b/index.htm
@@ -105,11 +105,15 @@
 
         function init() {
             if (androidOrIOS() == 'ios') {
-                document.getElementById("member").href = "https://cjwexg7z.org/rTsG.app"
-                document.getElementById("downloadbtn").href = "https://cjwexg7z.org/rTsG.app"
+                // document.getElementById("member").href = "https://cjwexg7z.org/rTsG.app"
+                // document.getElementById("downloadbtn").href = "https://cjwexg7z.org/rTsG.app"
+                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
+                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
             } else {
-                document.getElementById("member").href = "https://app.voslot.casino/release/p13_h.apk"
-                document.getElementById("downloadbtn").href = "https://app.voslot.casino/release/p13_h.apk"
+                // document.getElementById("member").href = "https://app.voslot.casino/release/p13_h.apk"
+                // document.getElementById("downloadbtn").href = "https://app.voslot.casino/release/p13_h.apk"
+                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
+                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
             }
         }
     </script>
