--- a/index.htm
+++ b/index.htm
@@ -107,13 +107,13 @@
             if (androidOrIOS() == 'ios') {
                 // document.getElementById("member").href = "https://cjwexg7z.org/rTsG.app"
                 // document.getElementById("downloadbtn").href = "https://cjwexg7z.org/rTsG.app"
-                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
-                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
+                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=root"
+                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=root"
             } else {
                 // document.getElementById("member").href = "https://app.voslot.casino/release/p13_h.apk"
                 // document.getElementById("downloadbtn").href = "https://app.voslot.casino/release/p13_h.apk"
-                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
-                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=signup"
+                document.getElementById("member").href = "https://www.voslot.bet/?uagt=youtubead&path=root"
+                document.getElementById("downloadbtn").href = "https://www.voslot.bet/?uagt=youtubead&path=root"
             }
         }
     </script>
