--- a/maintance.html
+++ b/maintance.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -190,7 +191,7 @@
 <div class="MAINT_main_bg">
     <div id="MAINT_main">
             <div id="MAINT_main_content" style="margin: 0 auto" class="bg_shadow">
-                <p>VOSLOT APP will be down for maintenance in order to provide our members a better gameplay experience.  Please visit the official website of VOSLOT, voslot.bet. Thanks for your cooperation!</p>
+                <p>VOSLOT APP will be down for maintenance in order to provide our members a better gameplay experience.  Please visit the official website of VOSLOT, <b style="font-size: medium;">https://voslot.bet</b>. Thanks for your cooperation!</p>
                 <div style="margin:20px">
                     <a href="https://direct.lc.chat/13772910/" style="text-decoration: none;">
                         <div class="link-info left" data-id="1227364">
